--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -24,22 +24,18 @@
 .i-intro {
 	font-size: 30px;
 	font-weight: 300;
-	display: flex;
-	justify-content: center;
-	align-items: center;
 }
 .i-name {
 	font-size: 80px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
 }
 .i-title {
 	height: 50px;
 	overflow: hidden;
+	margin-bottom: 30px;
 }
 .i-title-wrapper {
 	height: 100%;
+
 	animation: move 5s ease-in-out infinite alternate;
 }
 
@@ -53,12 +49,9 @@
 }
 .i-title-item {
 	height: 50px;
-	font-size: 30px;
+	font-size: 35px;
 	font-weight: bold;
 	color: #7950f2;
-	display: flex;
-	justify-content: center;
-	align-items: center;
 }
 
 .i-scroll {
