Finish Product List

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -19,7 +19,7 @@
 	position: absolute;
 	top: 50px;
 	left: 50px;
-	background-color: #7950f2;
+	background-color: #7950f265;
 }
 .a-card {
 	width: 60%;
